# ogs

Applications/DataExplorer/DataView/: ElementTreeModel.cpp
Applications/DataExplorer/VtkVis/: VtkMeshConverter.cpp  VtkMeshSource.cpp
Applications/Utils/: CMakeLists.txt
Applications/Utils/FileConverter/: CMakeLists.txt  CleanupNeumannBCs.cpp  GMSH2OGS.cpp  GocadSGridReaderMain.cpp
Applications/Utils/GeoTools/: CMakeLists.txt  CreateNeumannBCsOnSurface.cpp  TimeAndMemoryMeasurementForGeometries.cpp
Applications/Utils/MeshEdit/: CMakeLists.txt  ExtractSurface.cpp
Applications/Utils/ModelPreparation/: CMakeLists.txt  ConvertPolylineToVerticalPolygon.cpp  CreateTransientNeumannConditions.cpp  ExtractMeshNodes.cpp  ExtractMeshNodes.h
Applications/Utils/SimpleMeshCreation/: CMakeLists.txt  createMeshElemPropertiesFromASCRaster.cpp  generateStructuredQuadMesh.cpp
AssemblerLib/: SerialExecutor.h
BaseLib/: excludeObjectCopy.h  quicksort.h
FileIO/: CMakeLists.txt  GMSHInterface.cpp  TINInterface.cpp
FileIO/GmshIO/: GMSHFixedMeshDensity.cpp  GMSHFixedMeshDensity.h  GMSHMeshDensityStrategy.h  GMSHNoMeshDensity.h  GMSHPolygonTree.cpp  GMSHPolygonTree.h
FileIO/GocadIO/: CMakeLists.txt  GocadNode.h  GocadSGridReader.cpp  GocadSGridReader.h
FileIO/Legacy/: MeshIO.cpp  OGSIOVer4.cpp
FileIO/MPI_IO/: NodePartitionedMeshReader.cpp
FileIO/XmlIO/Boost/: BoostVtuInterface.cpp  BoostXmlGmlInterface.cpp  BoostXmlGmlInterface.h
FileIO/XmlIO/Qt/: XmlGmlInterface.cpp
GeoLib/: AnalyticalGeometry-impl.h  AnalyticalGeometry.cpp  AnalyticalGeometry.h  PointVec.cpp  PointVec.h  PolygonWithSegmentMarker.cpp  PolygonWithSegmentMarker.h  Surface.cpp  SurfaceGrid.cpp  SurfaceGrid.h
Gui/VtkVis/: VtkMeshConverter.cpp  VtkMeshSource.cpp  VtkMeshSource.h
MathLib/: TemplatePoint.h
MathLib/LinAlg/Lis/: LisTools.cpp  LisTools.h
MeshLib/: ElementCoordinatesMappingLocal.cpp  ElementCoordinatesMappingLocal.h  Mesh.cpp  Mesh.h  MeshSurfaceExtraction.cpp  Node.h  Properties.h  PropertyVector.h
MeshLib/Elements/: TemplateLine-impl.h  TemplateQuad.h
MeshLib/MeshEditing/: ElementExtraction.cpp  ElementExtraction.h  Mesh2MeshPropertyInterpolation.cpp  Mesh2MeshPropertyInterpolation.h  MeshRevision.cpp  MeshRevision.h
MeshLib/MeshGenerators/: ConvertRasterToMesh.cpp  ConvertRasterToMesh.h
NumLib/Fem/CoordinatesMapping/: NaturalCoordinatesMapping-impl.h
Tests/GeoLib/: TestGEOObjectsMerge.cpp  TestIsPointInTriangle.cpp  TestIsPointOnSurface.cpp  TestSurfaceIsPointInSurface.cpp
Tests/MeshLib/: MeshProperties.cpp
Utils/FileConverter/: CMakeLists.txt  ComputeBoundingBox.cpp  ComputeRasterFromPoints.cpp  GocadSGridReader.cpp  GocadSGridReader.h  GocadSGridReaderMain.cpp
Utils/FileConverter/Gocad/: CMakeLists.txt  GocadNode.h  GocadSGridReader.cpp  GocadSGridReader.h  GocadSGridReaderMain.cpp
Utils/MeshEdit/: CMakeLists.txt  CorrectCoordinates.cpp  ExtractMeshNodes.cpp  ExtractMeshNodes.h  RefineLayeredMeshInZDirection.cpp  convertPolylineToVerticalPolygon.cpp
